feat(home): adds initial structure to the home page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!--<link rel="icon" type="image/svg+xml" href="/vite.svg" />-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>restaurant-app</title>
+    <meta name="description" content="Contemporary haute cuisine with French roots"/>
+    <meta name="og:title" content="Le Dôme"/>
+    <meta name="og:description" content="Experience the essence of French haute cuisine at Le Dôme, where seasonal ingredients and artistic presentation come together."/>
+    <meta name="og:image" content="restaurant.jpg"/>
+    <title>Le Dôme</title>
   </head>
   <body>
     <div id="root"></div>
